<resources>
    <string name="app_name">Cookiez</string>

    <string name="next">Berikutnya</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="skip">Lewati untuk Saat ini</string>

    <string name="title_first_screen">Tutorial Memasak</string>
    <string name="subtitle_first_screen">Temukan tutorial masak yang sesuai dengan kategori yang kamu ingingkan</string>
    <string name="title_second_screen">Pesan Bahan</string>
    <string name="subtitle_second_screen">Kami sediakan bahan yang sesuai dengan takaran dari tutorial masak kami</string>
    <string name="title_third_screen">Antar Bahan</string>
    <string name="subtitle_third_screen">Kami antarkan bahan masakan sampai kedepan rumahmu</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="or">atau</string>
    <string name="login_google">Masuk dengan akun Google</string>
    <string name="have_no_account">Tidak punya akun?</string>
    <string name="have_an_account">Sudah punya akun?</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="name">Nama</string>
    <string name="your_location">Lokasimu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Kategori</string>
    <string name="popular_menu">Menu Populer</string>
    <string name="see_all">Lihat Semua ></string>
    <string name="exclusive_menu">Menu Ekslusif</string>
    <string name="home">Home</string>
    <string name="voucher">Voucher</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="availability">Ketersediaan Bahan</string>
    <string name="ingredients">Bahan-bahan:</string>
    <string name="steps">Langkah-langkah:</string>
    <string name="title_menu_description">Deskripsi Masakan</string>
    <string name="estimate_time">Estimasi Waktu</string>
    <string name="benefit">Benefit yang didapat</string>
    <string name="title_number_of_rating">Ringkasan Penilaian</string>
    <string name="title_list_of_review">Daftar Penilaian</string>
    <string name="message_empty_notification">Belum ada notifikasi yang tersedia</string>
    <string name="message_empty_favorite">Belum menambahakan apapun dalam favorit kamu</string>
    <string name="title_top_up">Isi Saldo</string>
    <string name="rank_poin">Rank Poin</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="location">Alamatku</string>
    <string name="history">Riwayat Pesanan</string>
    <string name="account">Akun</string>
    <string name="other">Lainnya</string>
    <string name="cookiez_wallet">Cookiez Wallet</string>
    <string name="logout">Keluar</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="alamat">Alamat</string>
    <string name="ubah_profile">Ubah Profil</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="information">Information</string>
    <string name="desc_dialog_voucher">Terus tingkatkan pesananmu untuk mendapat tambahan Coin Poin yang bisa kamu tukar dengan beragam Voucher menarik yang ada.</string>
    <string name="desc_dialog_rank">Saat ini anda berada pada peringkat ke %d. Terus tingkatkan pesananmu untuk mendapat tambahan poin XP.</string>
    <string name="ok">OK</string>

</resources>